# Kulki

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.clang  Dockerfile.gcc  main.cpp  readme.md
.github/workflows/: clang.yaml  clang_format.yaml  cmake.yml  docker_build.yaml  gcc.yaml  gcc.yml
docker/: Dockerfile.clang  Dockerfile.format  Dockerfile.gcc
include/: drawer.hpp  load.hpp  map.hpp  mouse_click_event.hpp  random.hpp  randoms.hpp  red_box.hpp  resource.hpp  search_font.hpp  tester.hpp  thread_wrapper.hpp
src/: CMakeLists.txt  main.cpp
src/babel/: babel.hpp
src/babel/babLib/: algorithm.hpp  any.hpp  char.hpp  file_system.hpp  math.hpp  must_have.hpp  optional.hpp  system.hpp  text.hpp  time.hpp  typdef.hpp  variadic.hpp  wraper.hpp
src/babel/babLib/algorithm/: algorithm.hpp  cast.hpp  math.hpp  string.hpp  vector.hpp
src/babel/babLib/algorithm/crypt/sha/: sha1.hpp  sha224.hpp  sha256.hpp  sha384.hpp  sha512.hpp  sha512t.hpp  sha_array.hpp
src/babel/babLib/concepts/: concepts.hpp
src/babel/babLib/container/: container.hpp  dynamic_array.hpp  list.hpp
src/babel/babLib/graphics/: cmyk.hpp  convert.hpp  graphics.hpp  rgb.hpp
src/babel/babLib/iterators/: enumerate.hpp  generator.hpp  iterator.hpp  range.hpp  read.hpp  write.hpp
src/babel/babLib/matrix/: matrix.hpp  operator_on_matrix.hpp
src/babel/babLib/request/: request.hpp
src/babel/babLib/system/: linux.hpp  system.hpp  windows.hpp
src/babel/babLib/tokens/: token.hpp  tokenization.hpp
src/babel/babLib/windows/: windows.hpp  windowsConv.hpp
src/function/: crypt.cpp  crypt.hpp  drawer.hpp  load.hpp  mouse_click_event.cpp  mouse_click_event.hpp  random_generator.hpp  randoms.cpp  search_font.hpp  tester.cpp  tester.hpp  thread_wrapper.hpp  waiter.hpp
src/function/crypt/: CMakeLists.txt  crypt.cpp  crypt.hpp
src/function/drawer/: CMakeLists.txt  drawer.hpp  drawer_global_class.cpp  drawer_utils.cpp  drawer_window.cpp
src/function/font/: CMakeLists.txt  search_font.hpp  search_font_linux.cpp  search_font_windows.cpp
src/function/load/: CMakeLists.txt  load.cpp  load.hpp  load_map.cpp  load_record.cpp
src/function/mouse/: CMakeLists.txt  mouse_click_event.cpp  mouse_click_event.hpp
src/function/random/: CMakeLists.txt  random.cpp  random.hpp
src/function/tester/: CMakeLists.txt  tester.cpp  tester.hpp
src/function/thread/: CMakeLists.txt  thread_wrapper.cpp  thread_wrapper.hpp
src/object/: CMakeLists.txt  ball.hpp  maincpy  map.hpp  red_box.hpp  resource.hpp
src/object/ball/: CMakeLists.txt  ball.cpp  ball.hpp
src/object/map/: CMakeLists.txt  map.cpp  map.hpp  map_check_score.cpp  map_move.cpp  map_next_three.cpp  map_position_check.cpp  map_score_there.cpp
src/object/red_box/: CMakeLists.txt  red_box.cpp  red_box.hpp
src/object/resource/: resource.hpp
